--- a/Regression/student_performance_ml_regression.ipynb
+++ b/Regression/student_performance_ml_regression.ipynb
@@ -638,7 +638,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "f6558528-6d76-4336-8072-0998d3a138c9"
+        "outputId": "464f6316-48e8-4d39-d13a-915f55e4c2f1"
       },
       "source": [
         "y_pred = regressor.predict(X_test)\n",
@@ -646,7 +646,7 @@
         "X_train\n",
         "y_train"
       ],
-      "execution_count": 14,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -665,24 +665,18 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([[1.0, 0.0, 5, 95, 6, 4],\n",
-              "       [1.0, 0.0, 2, 98, 7, 4],\n",
-              "       [0.0, 1.0, 2, 65, 8, 1],\n",
-              "       ...,\n",
-              "       [0.0, 1.0, 1, 76, 6, 5],\n",
-              "       [1.0, 0.0, 4, 44, 4, 8],\n",
-              "       [0.0, 1.0, 8, 83, 8, 1]], dtype=object)"
+              "array([83., 71., 43., ..., 54., 27., 76.])"
             ]
           },
           "metadata": {},
-          "execution_count": 14
+          "execution_count": 15
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "plt.scatter(X_train, y_train, color='red', label='Actual Training Data')\n",
+        "plt.scatter(X_train, y_train.reshape(-1,1), color='red', label='Actual Training Data')\n",
         "##plt.plot(X_train_sorted, y_train_pred_sorted, color='blue', label='Polynomial Regression Model')\n",
         "plt.plot(X_train, y_pred, color='blue', label='Polynomial Regression Model')\n",
         "plt.title('Multiple Linear Regression: Hours Studied vs. Score')\n",
@@ -692,12 +686,12 @@
         "plt.show()"
       ],
       "metadata": {
-        "id": "eYrtKZXwnOY7",
-        "outputId": "d4a0f146-0a47-4410-8f2f-35470dba3a1a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 806
-        }
+        },
+        "id": "eYrtKZXwnOY7",
+        "outputId": "d4a0f146-0a47-4410-8f2f-35470dba3a1a"
       },
       "execution_count": 13,
       "outputs": [
