--- a/Regression/student_performance_ml_regression.ipynb
+++ b/Regression/student_performance_ml_regression.ipynb
@@ -678,9 +678,8 @@
       "source": [
         "# Plot the predictions and the real values\n",
         "import seaborn as sns\n",
-        "sns.histplot(y_pred, color='red', alpha=0.5, bins=50)\n",
-        "sns.histplot(y_train, color='blue', alpha=0.5, bins=50)\n",
-        "plt.show()"
+        "sns.histplot(y_pred.reshape(len(y_pred),1), color='red', alpha=0.5, bins=50)\n",
+        "sns.histplot(y_test.reshape(len(y_test),1), color='blue', alpha=0.5, bins=50)"
       ],
       "metadata": {
         "colab": {
