--- a/Regression/student_performance_ml_regression.ipynb
+++ b/Regression/student_performance_ml_regression.ipynb
@@ -666,30 +666,17 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "68554f0c-767a-430b-c07a-1a31434c9414"
+        "outputId": "30ae9f78-65c4-4c89-dc33-d9cbf212d87d"
       },
       "source": [
         "#y_pred = regressor.predict(X_test)\n",
         "#print(np.concatenate((y_pred.reshape(len(y_pred),1), y_test.reshape(len(y_test),1)),1))\n",
         "X_train\n",
         "y_train\n",
-        "y_pred"
+        "y_train_pred"
       ],
-      "execution_count": null,
+      "execution_count": 41,
       "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "[[50.45128503 53.        ]\n",
-            " [53.09379171 50.        ]\n",
-            " [78.24502652 80.        ]\n",
-            " ...\n",
-            " [64.56863194 66.        ]\n",
-            " [25.89718776 27.        ]\n",
-            " [18.82598463 21.        ]]\n"
-          ]
-        },
         {
           "output_type": "execute_result",
           "data": {
@@ -699,7 +686,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 23
+          "execution_count": 41
         }
       ]
     },
