--- a/Regression/student_performance_ml_regression.ipynb
+++ b/Regression/student_performance_ml_regression.ipynb
@@ -666,27 +666,30 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "30ae9f78-65c4-4c89-dc33-d9cbf212d87d"
+        "outputId": "ec8cf906-3568-483f-f84d-7b18b4b1ec71"
       },
       "source": [
         "#y_pred = regressor.predict(X_test)\n",
         "#print(np.concatenate((y_pred.reshape(len(y_pred),1), y_test.reshape(len(y_test),1)),1))\n",
-        "X_train\n",
-        "y_train\n",
-        "y_train_pred"
+        "print(X_train)\n",
+        "print(y_train_pred)"
       ],
-      "execution_count": 41,
+      "execution_count": 44,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([50.45128503, 53.09379171, 78.24502652, ..., 64.56863194,\n",
-              "       25.89718776, 18.82598463])"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 41
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[1.0 0.0 5 95 6 4]\n",
+            " [1.0 0.0 2 98 7 4]\n",
+            " [0.0 1.0 2 65 8 1]\n",
+            " ...\n",
+            " [0.0 1.0 1 76 6 5]\n",
+            " [1.0 0.0 4 44 4 8]\n",
+            " [0.0 1.0 8 83 8 1]]\n",
+            "[80.58874267 75.56642938 42.52266362 ... 50.67568813 25.5720337\n",
+            " 77.97375017]\n"
+          ]
         }
       ]
     },
@@ -695,8 +698,8 @@
       "source": [
         "# Plot the predictions and the real values\n",
         "import seaborn as sns\n",
-        "sns.histplot(y_pred, color='red', alpha=0.5, bins=50)\n",
-        "sns.histplot(y_test, color='blue', alpha=0.5, bins=50)"
+        "sns.histplot(y_train_pred, color='red', alpha=0.5, bins=50)\n",
+        "sns.histplot(y_train, color='blue', alpha=0.5, bins=50)"
       ],
       "metadata": {
         "colab": {
